# PgoAgent

./: .gitignore  LICENSE  Makefile  README.md  config.toml  info.md  langgraph.json  outline.md  pyproject.toml
chat_models/: __init__.py
file/: test.md  矩阵.md
mcp_configs/admin/: navigation.json
mcp_configs/backup/: 12306.json  chart_display.json  pdf_reader.json  web_search.json  web_zhipuai_search.json
my_lab/: generator.py  print.py  two.py
proto/: agent.proto
scripts/: build_rag_system.py  fix_grpc_imports.py  generate_grpc.bat  generate_grpc.sh  init_rag.py  readme.md  tls.py
src/: init_rag.py
src/Finetunning/: dataset_2tasks.py  dataset_3tasks.py  templates.py
src/ModelDeployTune/: README.md  requirements.txt
src/ModelDeployTune/deployment/: config.py  config.toml  run_chat_model.py  run_embedding_model.py  run_rerank_model.py  test_chat_model.py  test_embedding_model.py  test_rerank_model.py
src/ModelDeployTune/fine_tunning/: convert_to_messages.py  dataset_cleansing.py  dataset_spliter.py  dataset_tasks_generator.py  deploy.py  merged.py  test.py  train.py
src/ModelDeployTune/fine_tunning/temp/: dataset_cleansing.jsonl  dataset_message.jsonl  origin_dataset.jsonl  train_dataset.jsonl  validate_dataset.jsonl
src/PgoModel/: __init__.py  chat_model.py  embedding_model.py  rerank_model.py
src/WebServer/: go.mod  go.sum  main.go  swagger.bat  swagger.sh
src/WebServer/.code_statistics/: history.json
src/WebServer/agent_grpc/: agent.pb.go  agent_grpc.pb.go
src/WebServer/config/: config.go  db.go  grpc_context.go  init.go
src/WebServer/controllers/: auth.go  conversation.go  delete.go  memory_controller.go  profile.go
src/WebServer/docs/: docs.go  swagger.json  swagger.yaml
src/WebServer/log/: logger.go  monitor.go
src/WebServer/middlewares/: auth.go  logger.go
src/WebServer/router/: router.go  run.go
src/WebServer/services/: client.go  function.go
src/WebServer/static/: chat.html
src/WebServer/static/css/: auth.css  chat.css
src/WebServer/static/js/: auth.js  chat.js
src/WebServer/utils/: code_ignore.go  code_status.go  cookie.go  encryption.go  queue.go  tokenbucket_test.go  utils.go
src/agent/: __init__.py  agent_grpc_server.py  config.py  database.py  date.py  graph.py  init_rag.py  main_cli.py  main_grpc.py  my_agent.py  my_llm.py  requirements.txt  state_utils.py
src/agent/agent_grpc/: __init__.py  agent_pb2.py  agent_pb2.pyi  agent_pb2_grpc.py
src/agent/config/: __init__.py  basic_config.py  config.py  configuration.py  log.py  logger_config.py  ui.py
src/agent/grpc_server/: __init__.py  abort.py  jwtInterceptor.py  rateLimiter.py
src/agent/mcp_server/: __init__.py  mcp_external_server.py  tool_sse_server.py  tool_streamable_http_server.py
src/agent/model/: __init__.py  chat_model.py  embedding_model.py  llm.py  rerank_model.py
src/agent/rag/: RAGEngine.py  RagEngine.py  database.py  indexer.py  instance.py  loader.py  offline_ingest.py  spliter.py
src/agent/subAgents/: decisionAgent.py  memoryAgent.py  planAgent.py
src/agent/tools/: __init__.py  app.logs  basic_tool.py  file_tool.py  rag_retrieve_tool.py  shell_tool.py  tool1.py  tool_file.py  tool_rag_retrieve.py.py
src/agent/utils/: __init__.py  base_utils.py  database.py
src/agent_development.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/chroma_db/: chroma.sqlite3
src/config/: __init__.py  basic_config.py  configuration.py  database.py  logger_config.py
src/fine_tunning/: dataset_2tasks.py  dataset_3tasks.py  templates.py
src/utils/: __init__.py  base_utils.py
src/web_client/: go.mod  go.sum  main.go
src/web_client/.code_statistics/: history.json
src/web_client/agent_grpc/: agent.pb.go  agent_grpc.pb.go
src/web_client/config/: client_test.go  config.go  config_test.go  db.go  grpc_jwt.go  init.go  ui.go
src/web_client/controllers/: auth.go  conversation.go  delete.go
src/web_client/global/: global.go
src/web_client/grpc_client/: client.go  client_test.go  function.go  grpc_jwt.go  types.go
src/web_client/log/: logger.go  monitor.go
src/web_client/middlewares/: auth.go  recover.go
src/web_client/models/: models.go
src/web_client/proto/: server.proto
src/web_client/router/: router.go  run.go
src/web_client/services/: function.go  types.go
src/web_client/static/: chat.html  entry.html
src/web_client/utils/: cache.go  code_status.go  jwt.go  tokenbucket_test.go  utils.go
test/: RAGtest.ipynb  llm_test.py  my_agent_chain.py  my_agent_test.py  my_test.py  ssh_llm_test.ipynb
(+2 files in other folders)
