[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-development"
version = "0.0.1"
description = "LangChain Agent"
authors = [{ name = "yongzhiyin", email = "610415432@qq.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12,<4.0.0"  # 修改这一行
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langgraph>=1.0.0",
    "langchain>=1.1.0",
    "langchain-core>=1.0.0",
    "python-dotenv>=1.0.1",
    "langgraph-checkpoint-postgres>=3.0.0",     # 新增PostgreSQL
    "unstructured (>=0.18.21,<0.19.0)",
    "markdown (>=3.10,<4.0)",
    "pillow>=12.0.0",
    "pandas>=2.3.3",
    "jq>=1.10.0",
    "docx>=0.2.4",
    "python-docx>=1.2.0",
    "chromadb>=1.3.7",
    "langchain-openai>=1.1.3",
    "langchain-community>=0.4.1",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.1",
    "ruff>=0.6.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

# ---- 关键：标准 src-layout 打包配置 ----
[tool.setuptools]
package-dir = { "" = "src" } # 路径寻找

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent*", "chat_models*", "utils*"] # 对应的包名

# ----------------------------------------
